--- a/samochodGUI/src/main/resources/org/example/samochodgui/dodaj-view.fxml
+++ b/samochodGUI/src/main/resources/org/example/samochodgui/dodaj-view.fxml
@@ -1,36 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" vgap="10.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.samochodgui.DodajSamochodController">
+<GridPane hgap="10.0" vgap="10.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.samochodgui.DodajSamochodController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <Label text="Dodawanie pojazdu" GridPane.columnSpan="2">
-            <font>
-                <Font name="System Bold" size="14.0" />
-            </font>
+        <Label text="Konfigurator Samochodu" GridPane.columnSpan="2">
+            <font><Font name="System Bold" size="18.0" /></font>
         </Label>
 
-        <Label text="Nr rejestracyjny:" GridPane.rowIndex="1" />
-        <TextField fx:id="nazwaField" promptText="np. KRA 12345" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label text="Model:" GridPane.rowIndex="1" />
+        <TextField fx:id="modelTextField" promptText="np. Fiat" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label text="Max prędkość:" GridPane.rowIndex="2" />
-        <TextField fx:id="predkoscField" promptText="np. 220" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Rejestracja:" GridPane.rowIndex="2" />
+        <TextField fx:id="registrationTextField" promptText="np. KR 12345" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-        <Label text="Ilość biegów:" GridPane.rowIndex="3" />
-        <TextField fx:id="biegiField" promptText="np. 6" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label text="Wybierz Silnik:" GridPane.rowIndex="3" />
+        <ComboBox fx:id="engineComboBox" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+        <Label text="Wybierz Skrzynię:" GridPane.rowIndex="4" />
+        <ComboBox fx:id="gearboxComboBox" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+        <Label text="Waga (kg):" GridPane.rowIndex="5" />
+        <TextField fx:id="weightTextField" promptText="np. 1200.5" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
+        <Label text="Prędkość (km/h):" GridPane.rowIndex="6" />
+        <TextField fx:id="speedTextField" promptText="np. 180" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+
+        <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="7">
+            <children>
+                <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#onConfirmButton" text="Zatwierdź" />
+                <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#onCancelButton" text="Anuluj" />
+            </children>
+            <GridPane.margin>
+                <Insets top="10.0" />
+            </GridPane.margin>
+        </HBox>
+
     </children>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
